Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/Driver_Portal_Action__e.object-meta.xml
<CustomObject>
    <label>Driver Portal Action</label>
    <pluralLabel>Driver Portal Actions</pluralLabel>
</CustomObject>