Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>