Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Device_Info__c.field-meta.xml
<CustomField>
    <fullName>Device_Info__c</fullName>
    <label>Device_Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>