Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event_Time</label>
    <type>DateTime</type>
</CustomField>