Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>