Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>