Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Load_Id__c.field-meta.xml
<CustomField>
    <fullName>Load_Id__c</fullName>
    <label>Load_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>