Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>