Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>