Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Action__e/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <label>Token_Hash</label>
    <length>250</length>
    <type>Text</type>
</CustomField>